--- a/Project Code/css/login.css
+++ b/Project Code/css/login.css
@@ -5,56 +5,38 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
 }
-/* .box
-  {
-    height: 300px;
-    width: 1000px;
-    background-color: #FAFAFA;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    border-radius: 5px;
-    transform: translate(-50%,-50%);
-  } */
+
 .main {
   width: 450px;
+  /* height: 90vh; */
   background-color: #f5f5f5;
   border-radius: 5px;
-  position: absolute;
+  margin: 50px auto 30px;
+  /* position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 99;
+  z-index: 99; */
   font-family: 'Open Sans', sans-serif;
+  overflow: hidden;
+  position: relative;
 }
 .main h1 {
   padding: 30px;
   margin-top: 20px;
 }
 
-.main .form-input .fas {
+.main .form-input .fa-user {
   position: absolute;
-  top: 31.5%;
+  top: 27.5%;
   left: 20%;
 }
 .main .form-input .fa-lock {
   position: absolute;
-  top: 47.5%;
+  top: 42%;
   left: 20%;
 }
-/* .main input[type='text'],
-input[type='password'],
-input[type='email'] {
-  display: block;
-  margin: 30px auto;
-  padding: 7px 80px;
-  /* border-top: none;
-  border-right: none;
-  border-left: none; 
-  border: 1px solid black;
-  outline: none;
-  background: none;
-} */
+
 .main input[type='text'] {
   display: block;
   padding: 7px 80px;
@@ -72,6 +54,10 @@ input[type='email'] {
 
   margin-bottom: 3px;
 }
+.main input::placeholder{
+  font-size: 14px;
+  color: rgba(0, 17, 255, 0.685);
+}
 .main #email__label1 {
   margin-left: 53px;
   font-size: 13px;
@@ -80,6 +66,11 @@ input[type='email'] {
 .main #pass__label1 {
   margin-left: 53px;
   font-size: 13px;
+}
+.loginErrorMsg #errorMsg{
+  text-align: center;
+  font-size: 14px;
+  visibility: hidden;
 }
 .forgot__pass a {
   text-decoration: none;
@@ -99,7 +90,7 @@ input[type='email'] {
 }
 .loginWith {
   text-align: center;
-  padding: 24px;
+  /* padding: 24px; */
 }
 .loginWith button {
   padding: 5px 91px;
