--- a/Project Code/css/signup.css
+++ b/Project Code/css/signup.css
@@ -17,11 +17,9 @@ body {
   }
   .form-body{
     background: #fff;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%,-50%);
+      margin: 40px auto 20px;
       border-radius: 7px;
+      width: 450px;
 
   }
   .form-area{
@@ -47,7 +45,13 @@ body {
   }
   .form-area h3{
       font-size: 4rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 30px;
+
+      border-bottom: 2px solid #000;
+
+      display: inline-block;
+
+      padding-bottom: 1rem;
   }
   .form-footer {
     text-align: center;
