--- a/Project Code/css/signup.css
+++ b/Project Code/css/signup.css
@@ -45,7 +45,7 @@ body {
   }
   .form-area h3{
       font-size: 4rem;
-      margin-bottom: 30px;
+      margin-bottom: 7rem;
 
       border-bottom: 2px solid #000;
 
@@ -63,6 +63,11 @@ body {
     text-decoration: none;
     color: white;
     font-size: 1.5rem;
+  }
+  .loginErrorMsg #errorMsg{
+    text-align: center;
+    font-size: 14px;
+    color: green;
   }
 
 
