--- a/Project Code/css/doctorDetails.css
+++ b/Project Code/css/doctorDetails.css
@@ -10,3 +10,26 @@ html{
     height: 30rem;
     width:30rem;
 }
+
+.docInfo{
+
+}
+.docInfo h1{
+    font-size: 4rem;
+    padding: 3rem 0;
+}
+.docInfo h3{
+    font-size: 3rem;
+    padding: 0 0 2rem 0;
+}
+.docInfo h4{
+    font-size: 3rem;
+    padding: 0 0 2rem 0;
+}
+.docInfo p{
+    font-size: 2rem;
+    padding: 0 0 2rem 0;
+}
+.docInfo a {
+    font-size: 1.6rem;
+}
